--- a/merged-py-js/index.html
+++ b/merged-py-js/index.html
@@ -15,7 +15,7 @@
 		  <span class="input-group-text h2 " id="inputGroup-sizing-md">Message</span>
 		  <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-md" id="message">
 		</div><br/>
-		<button id="filter" class="btn btn-success" type="submit" py-click="add_task()"">Filter</button>
+		<button id="filter" class="btn btn-success" type="submit" py-click="convert()"">Filter</button>
 
 		<h3>Result</h3>
 		
